--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mazulatas/meta.express",
-  "version": "1.1.0",
+  "version": "0.0.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -18,7 +18,7 @@
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
     "precommit": "lint-staged",
     "travis-deploy-once": "travis-deploy-once",
-    "deployToNpm": "npm run test && npm run build && npm publish ./dist"
+    "deployToNpm": "npm run build && npm publish ./dist"
   },
   "dependencies": {
     "@mazulatas/meta.js": "1.2.0",
