--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "travis-deploy-once": "travis-deploy-once",
     "deployToNpm": "npm run build && npm publish ./dist"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@mazulatas/meta.js": "1.2.0",
     "express": "4.17.1",
     "express-ws": "5.0.2",
